--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Load Leaflet code library - see updates at http://leafletjs.com/download.html -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  
+    <!-- Load Cluster-Plugin -->
+  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/"></script>
 
   <!-- Load jQuery and PapaParse to read data from a CSV file -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
