--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   
     <!-- Load Cluster-Plugin -->
-  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/MarkerCluster.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/MarkerCluster.Default.css"/>
+  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+  
 
   <!-- Load jQuery and PapaParse to read data from a CSV file -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
