--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
   }); // EDIT - insert or remove ".addTo(map)" before last semicolon to display by default
   controlLayers.addBaseLayer(terrain, 'Stamen Terrain basemap');
 
+    var greenIcon = L.icon({
+    iconUrl: 'test.png'
+
+    iconSize:     [40, 30], // size of the icon
+    iconAnchor:   [20, 15], // point of the icon which will correspond to marker's location
+    popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+});
+    
+    
   // see more basemap options at https://leaflet-extras.github.io/leaflet-providers/preview/
 
         var markers = L.markerClusterGroup();
