--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   }); // EDIT - insert or remove ".addTo(map)" before last semicolon to display by default
   controlLayers.addBaseLayer(terrain, 'Stamen Terrain basemap');
 
-    var greenIcon = L.icon({
-    iconUrl: 'test.png'
+    var test = L.icon({
+    iconUrl: 'test.png',
 
     iconSize:     [40, 30], // size of the icon
     iconAnchor:   [20, 15], // point of the icon which will correspond to marker's location
