--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     for (var i in data) {
       var row = data[i];
 
-      var marker = L.marker([row.lat, row.lng], {
+      var marker = L.marker([row.lat, row.lng],{icon: test}, {
         opacity: 1
       }).bindPopup(row.name);
       
