--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   var map = L.map('map', {
     center: [47.35, 8.71], // EDIT latitude, longitude to re-center map
     zoom: 12,  // EDIT from 1 to 18 -- decrease to zoom out, increase to zoom in
-    scrollWheelZoom: false,
+    scrollWheelZoom: true,
     tap: false
   });
 
@@ -75,7 +75,7 @@
 	spiderfyOnMaxZoom: true,
 	showCoverageOnHover: false,
 	zoomToBoundsOnClick: true,
-  disableClusteringAtZoom: 16    
+  disableClusteringAtZoom: 17    
           
 });
     
