--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     scrollWheelZoom: true,
     tap: false
   });
+ map.options.maxZoom = 17;
 
   /* Control panel to display map layers */
   var controlLayers = L.control.layers( null, null, {
