--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
     
     for (var i in data) {
       var row = data[i];
-	    var iconname = row.name;
+	    var iconname = row.kategorie;
 	    iconname = iconname.replace(/\s/g, '');
+	    iconname = iconname.replace(/:\s*/g, '');
 
       var marker = L.marker([row.lat, row.lng],{icon: test}, {
         opacity: 1
