--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 	    iconname = iconname.replace(/\s/g, '');
 	    iconname = iconname.replace(/:\s*/g, '');
 	    iconname = iconname.toLowerCase();
+	    iconname = 'schulekindergarten';
 
       var marker = L.marker([row.lat, row.lng],{icon: iconname}, {
         opacity: 1
