--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	    iconname = iconname.toLowerCase();
 	    iconname = 'schulekindergarten';
 
-      var marker = L.marker([row.lat, row.lng],{icon: iconname}, {
+      var marker = L.marker([row.lat, row.lng],{icon: schulekindergarten}, {
         opacity: 1
       }).bindPopup(row.name);
       
