--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
   });
 map.addLayer(markers);
+	  controlLayers.addOverlay(markers, 'Markers');
   map.attributionControl.setPrefix(
     'View <a href="https://github.com/HandsOnDataViz/leaflet-map-csv" target="_blank">code on GitHub</a>'
   );
