--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         var markers = L.markerClusterGroup({
 	spiderfyOnMaxZoom: true,
 	showCoverageOnHover: false,
-	zoomToBoundsOnClick: true,  
+	zoomToBoundsOnClick: true,
+	disableClusteringAtZoom: 18,
           
 });
     
